manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users-app
  template:
    metadata:
      labels:
        app: users-app
    spec:
      containers:
      - name: users-container
        image: ttl.sh/users-img:8h
        imagePullPolicy: "Always"
        ports:
        - containerPort: 5000
