manifests/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: users-loadbalancer
spec:
  selector:
    app: users-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: LoadBalancer
