manifests/statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: users-mongo-service
spec:
  type: ClusterIP
  selector:
    app: users-mongo-app
  ports:
    - port: 27017

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: users-mongo-statefulset
spec:
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: users-mongo-app
  serviceName: users-mongo-service
  template:
    metadata:
      labels:
        app: users-mongo-app
    spec:
      containers:
        - name: users-mongo-container
          image: mongo:6.0.3
          ports:
            - containerPort: 27017
          
          volumeMounts:
            - name: pvc
              mountPath: /data/db
              subPath: users-mongo-app
      volumes:
        - name: pvc
          persistentVolumeClaim:
            claimName: users-mongo-pvc
